@@ -817,11 +817,10 @@ class ReflectionTest(TestBase, AssertsExecutionResults):
                  ( mysql.MSSmallInteger(4), mysql.MSSmallInteger(4), ),
                  ( mysql.MSMediumInteger(), mysql.MSMediumInteger(), ),
                  ( mysql.MSMediumInteger(8), mysql.MSMediumInteger(8), ),
-                 ( Binary(3), mysql.TINYBLOB(), ),
-                 ( Binary(), mysql.BLOB() ),
+                 ( LargeBinary(3), mysql.TINYBLOB(), ),
+                 ( LargeBinary(), mysql.BLOB() ),
                  ( mysql.MSBinary(3), mysql.MSBinary(3), ),
                  ( mysql.MSVarBinary(3),),
-                 ( mysql.MSVarBinary(), mysql.MSBlob()),
                  ( mysql.MSTinyBlob(),),
                  ( mysql.MSBlob(),),
                  ( mysql.MSBlob(1234), mysql.MSBlob()),
@@ -1081,7 +1080,7 @@ class SQLTest(TestBase, AssertsCompiledSQL):
             (m.MSNChar, "CAST(t.col AS CHAR)"),
             (m.MSNVarChar, "CAST(t.col AS CHAR)"),
 
-            (Binary, "CAST(t.col AS BINARY)"),
+            (LargeBinary, "CAST(t.col AS BINARY)"),
             (BLOB, "CAST(t.col AS BINARY)"),
             (m.MSBlob, "CAST(t.col AS BINARY)"),
             (m.MSBlob(32), "CAST(t.col AS BINARY)"),
